First attempt at implementing feature request 961762 (embed attributes to be forwarded).